solc_noopt_ossfuzz_seed_corpus/test_sol/test_a3aab0b846a9fcd613ba20b852eaeaf41e81f4c39c7eeb332fb89d5a48b744d8_test_sol.sol
==== Source: s1.sol ====
contract C {}
==== Source: s2.sol ====
import {C as D} from "s1.sol";
contract D {}
// ----
// DeclarationError 2333: (s2.sol:31-44): Identifier already declared.
